[gd_scene format=3 uid="uid://t68rndibd2bb"]

[ext_resource type="Script" uid="uid://142xkmiceo5w" path="res://Client/ui/Lobby.gd" id="1_ll2xe"]

[node name="Lobby" type="Control" unique_id=155415047]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(352, 240)
script = ExtResource("1_ll2xe")

[node name="PlayerNameLabel" type="Label" parent="." unique_id=2064866708]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -152.0
offset_right = 52.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 0

[node name="PlayersBox" type="ColorRect" parent="." unique_id=183429981]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.18
anchor_right = 0.48
anchor_bottom = 0.88
offset_left = 6.3999977
offset_top = -52.640007
offset_right = 6.4000244
offset_bottom = -52.640015
color = Color(0, 0, 0, 0)

[node name="PlayersList" type="GridContainer" parent="PlayersBox" unique_id=1527846370]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameBox" type="ColorRect" parent="." unique_id=1596528923]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.52
anchor_top = 0.18
anchor_right = 0.95
anchor_bottom = 0.88
offset_left = -7.039978
offset_top = -52.640007
offset_right = -7.039917
offset_bottom = -52.640015
color = Color(0, 0, 0, 0)

[node name="GameList" type="GridContainer" parent="GameBox" unique_id=1098180103]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="Deconnexion" type="Button" parent="." unique_id=1298183396]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -184.0
offset_top = -72.0
offset_right = -38.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
text = "DÃ©connexion"

[node name="Background" type="ColorRect" parent="." unique_id=357516596]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.6745098, 0.3254902, 0.26666668, 1)

[connection signal="pressed" from="Deconnexion" to="." method="_on_deconnexion_pressed"]
